@@ -39,6 +39,7 @@ import java.util.List;
 import java.util.Set;
 
 import loci.common.Region;
+import loci.formats.codec.Codec;
 import loci.formats.codec.CodecOptions;
 import loci.formats.in.MetadataLevel;
 import loci.formats.in.MetadataOptions;
@@ -363,6 +364,25 @@ public abstract class WriterWrapper implements IFormatWriter {
     return writer.getResolutions();
   }
 
+  // -- ICompressedTileWriter API methods --
+
+  @Override
+  public void saveCompressedBytes(int no, byte[] buf, int x, int y, int w, int h)
+    throws FormatException, IOException
+  {
+    writer.saveCompressedBytes(no, buf, x, y, w, h);
+  }
+
+  @Override
+  public Codec getCodec() {
+    return writer.getCodec();
+  }
+
+  @Override
+  public CodecOptions getCodecOptions() {
+    return writer.getCodecOptions();
+  }
+
   // -- IFormatHandler API methods --
 
   @Override
@@ -431,10 +451,9 @@ public abstract class WriterWrapper implements IFormatWriter {
         c = writer.getClass();
       }
       try {
-        childCopy = (IFormatWriter) c.newInstance();
+        childCopy = (IFormatWriter) c.getDeclaredConstructor().newInstance();
       }
-      catch (IllegalAccessException exc) { throw new FormatException(exc); }
-      catch (InstantiationException exc) { throw new FormatException(exc); }
+      catch (ReflectiveOperationException exc) { throw new FormatException(exc); }
     }
 
     // use crazy reflection to instantiate a writer of the proper type
