@@ -42,6 +42,7 @@ import loci.formats.FormatException;
 import loci.formats.FormatReader;
 import loci.formats.FormatTools;
 import loci.formats.IFormatReader;
+import loci.formats.ImageTools;
 import loci.formats.MetadataTools;
 import loci.formats.codec.Codec;
 import loci.formats.codec.CodecOptions;
@@ -405,6 +406,7 @@ public class CellSensReader extends FormatReader {
   private int previousTag = 0;
 
   private ArrayList<Pyramid> pyramids = new ArrayList<Pyramid>();
+  private boolean[] bgr;
 
   private transient boolean expectETS = false;
   private transient int channelCount = 0;
@@ -536,8 +538,8 @@ public class CellSensReader extends FormatReader {
       Region intersection = null;
 
       byte[] tileBuf = null;
-      int pixel =
-        getRGBChannelCount() * FormatTools.getBytesPerPixel(getPixelType());
+      int bpp = FormatTools.getBytesPerPixel(getPixelType());
+      int pixel = getRGBChannelCount() * bpp;
       int outputRowLen = w * pixel;
 
       Pyramid pyramid = getCurrentPyramid();
@@ -588,6 +590,10 @@ public class CellSensReader extends FormatReader {
         }
       }
 
+      if (bgr[getCurrentPyramidIndex()]) {
+        ImageTools.bgrToRgb(buf, isInterleaved(), bpp, getRGBChannelCount());
+      }
+
       return buf;
     }
     else {
@@ -633,6 +639,7 @@ public class CellSensReader extends FormatReader {
       pyramids.clear();
       channelCount = 0;
       zCount = 0;
+      bgr = null;
     }
   }
 
@@ -649,8 +656,6 @@ public class CellSensReader extends FormatReader {
   /* @see loci.formats.FormatReader#initFile(String) */
   @Override
   protected void initFile(String id) throws FormatException, IOException {
-    super.initFile(id);
-
     if (!checkSuffix(id, "vsi")) {
       Location current = new Location(id).getAbsoluteFile();
       Location parent = current.getParentFile();
@@ -664,9 +669,11 @@ public class CellSensReader extends FormatReader {
         throw new FormatException("Could not find .vsi file.");
       }
       else {
-        id = vsiFile.getAbsolutePath();
+        initFile(vsiFile.getAbsolutePath());
+        return;
       }
     }
+    super.initFile(id);
 
     parser = new TiffParser(id);
     ifds = parser.getMainIFDs();
@@ -685,6 +692,7 @@ public class CellSensReader extends FormatReader {
     String name = file.getName();
     name = name.substring(0, name.lastIndexOf("."));
 
+    files.add(file.getAbsolutePath());
     Location pixelsDir = new Location(dir, "_" + name + "_");
     String[] stackDirs = pixelsDir.list(true);
     if (stackDirs != null) {
@@ -705,7 +713,6 @@ public class CellSensReader extends FormatReader {
         }
       }
     }
-    files.add(file.getAbsolutePath());
     usedFiles = files.toArray(new String[files.size()]);
 
     if (expectETS && files.size() == 1) {
@@ -755,6 +762,7 @@ public class CellSensReader extends FormatReader {
 
     IFDList exifs = parser.getExifIFDs();
 
+    bgr = new boolean[seriesCount];
     int index = 0;
     for (int s=0; s<seriesCount; s++) {
       CoreMetadata ms = new CoreMetadata();
@@ -762,9 +770,30 @@ public class CellSensReader extends FormatReader {
 
       if (s < files.size() - 1) {
         setCoreIndex(index);
-        String ff = files.get(s);
+        String ff = files.get(s + 1);
+        /**
+         * If there are more frame_*.ets files than there are metadata 'pyramids'
+         * defined in the .vsi, then we have orphaned frame files.  In this case
+         * we need to determine which are the valid frame files and which are 
+         * the orphans.  The valid ones need to be matched with the appropriate
+         * metadata blocks in the vsi, and the orphaned ones need to be ignored.
+        */
+        boolean hasOrphanEtsFiles = pyramids.size() < (files.size() - 1);
         try (RandomAccessInputStream stream = new RandomAccessInputStream(ff)) {
-            parseETSFile(stream, ff, s);
+            boolean validFrameFile = parseETSFile(stream, ff, s, hasOrphanEtsFiles);
+            /*
+             * If this frame file is an orphan, "undo" the work that was done for
+             * it and change its status to being an "extra" file.
+             */
+             if (!validFrameFile) {
+                core.remove(core.size()-1);
+                extraFiles.add(files.get(s + 1));
+                files.remove(s + 1);
+                usedFiles = files.toArray(new String[files.size()]);
+                s--;
+                seriesCount--;
+                continue;
+             }
         }
 
         ms.littleEndian = compressionType.get(index) == RAW;
@@ -788,10 +817,6 @@ public class CellSensReader extends FormatReader {
           }
         }
         index += ms.resolutionCount;
-
-        if (s < pyramids.size()) {
-          ms.seriesMetadata = pyramids.get(s).originalMetadata;
-        }
 
         setCoreIndex(0);
         ms.dimensionOrder = "XYCZT";
@@ -1010,11 +1035,11 @@ public class CellSensReader extends FormatReader {
   }
 
   /**
-   * Get an object representing the pyramid which contains the
+   * Get an index to the pyramid which contains the
    * current series/resolution. Accounts for flattened resolutions
    * as needed.
    */
-  private Pyramid getCurrentPyramid() {
+  private int getCurrentPyramidIndex() {
     int resIndex = getResolution();
     int pyramidIndex = getSeries();
     if (hasFlattenedResolutions()) {
@@ -1032,8 +1057,16 @@ public class CellSensReader extends FormatReader {
         }
       }
     }
+    return pyramidIndex;
+  }
 
-    return pyramids.get(pyramidIndex);
+  /**
+   * Get an object representing the pyramid which contains the
+   * current series/resolution. Accounts for flattened resolutions
+   * as needed.
+   */
+  private Pyramid getCurrentPyramid() {
+    return pyramids.get(getCurrentPyramidIndex());
   }
 
   /**
@@ -1172,7 +1205,8 @@ public class CellSensReader extends FormatReader {
     return buf;
   }
 
-  private void parseETSFile(RandomAccessInputStream etsFile, String file, int s)
+  private boolean parseETSFile(RandomAccessInputStream etsFile, String file, int s,
+                            boolean hasOrphanEtsFiles)
     throws FormatException, IOException
   {
     fileMap.put(core.size() - 1, file);
@@ -1224,7 +1258,8 @@ public class CellSensReader extends FormatReader {
     backgroundColor.put(getCoreIndex(), color);
 
     etsFile.skipBytes(4 * 10 - color.length); // background color
-    etsFile.skipBytes(4); // component order
+    int componentOrder = etsFile.readInt();
+    bgr[s] = componentOrder == 1 && compressionType.get(compressionType.size() - 1) == RAW;
     boolean usePyramid = etsFile.readInt() != 0;
 
     ms.rgb = ms.sizeC > 1;
@@ -1269,7 +1304,55 @@ public class CellSensReader extends FormatReader {
     int[] maxC = new int[maxResolution];
     int[] maxT = new int[maxResolution];
 
-    HashMap<String, Integer> dimOrder = pyramids.get(s).dimensionOrdering;
+    HashMap<String, Integer> dimOrder = new HashMap<String, Integer>();
+    Pyramid pyramid = null;
+    /**
+    * If there are orphaned .ets files with this vsi file, we need to determine whether
+    * the current one is an orphan or a legit file.  The logic to determine this is to
+    * see of there is a metadata block (ie 'pyramid') whose width and height are
+    * within the correct range for this .ets file.  If there is no matching metadata
+    * block, then we have to assume this is an orphan
+    **/
+    if (hasOrphanEtsFiles) {
+      int maxXAtRes0 = 0;
+      int maxYAtRes0 = 0;
+      for (TileCoordinate t : tmpTiles) {
+        if (!usePyramid || t.coordinate[t.coordinate.length - 1] == 0) {
+          maxXAtRes0 = Math.max(maxXAtRes0, t.coordinate[0]);
+          maxYAtRes0 = Math.max(maxYAtRes0, t.coordinate[1]);
+        }
+      }
+      int maxPixelWidth  = (maxXAtRes0 + 1) * tileX.get(tileX.size()-1);
+      int maxPixelHeight = (maxYAtRes0 + 1) * tileY.get(tileY.size()-1);
+      for (Pyramid p : pyramids) {
+        if (p.HasAssociatedEtsFile) // If this pyramid has already been linked to an ETS
+          continue;                 // then don't allow it to be linked to another.
+        if (  (p.width  <= maxPixelWidth ) && (p.width  >= maxPixelWidth  - tileX.get(tileX.size()-1))
+           && (p.height <= maxPixelHeight) && (p.height >= maxPixelHeight - tileY.get(tileY.size()-1)) ) {
+            pyramid = p;
+            p.HasAssociatedEtsFile = true; // Rememeber that this pyramid is now taken by an Ets.
+            break;
+        }
+      }
+      /**
+      * No matching metadata block.  This is an orphan ets file.  Undo and erase 
+      * all the data elements that have been gathered up for this .ets file.
+      **/
+      if (pyramid == null) {
+        fileMap.remove(core.size() - 1);
+        nDimensions.remove(nDimensions.size() - 1);
+        compressionType.remove(compressionType.size() - 1);
+        tileX.remove(tileX.size() - 1);
+        tileY.remove(tileY.size() - 1);
+        backgroundColor.remove(getCoreIndex());
+        tileOffsets.remove(tileOffsets.size()-1);
+        return(false);
+      }
+    }
+    else {
+      pyramid = pyramids.get(s);
+    }
+    dimOrder = pyramid.dimensionOrdering;
 
     for (TileCoordinate t : tmpTiles) {
       int resolution = usePyramid ? t.coordinate[t.coordinate.length - 1] : 0;
@@ -1364,13 +1447,9 @@ public class CellSensReader extends FormatReader {
         maxC[resolution] = t.coordinate[cIndex];
       }
     }
-
-    if (pyramids.get(s).width != null) {
-      ms.sizeX = pyramids.get(s).width;
-    }
-    if (pyramids.get(s).height != null) {
-      ms.sizeY = pyramids.get(s).height;
-    }
+    ms.sizeX = pyramid.width;
+    ms.sizeY = pyramid.height;
+    ms.seriesMetadata = pyramid.originalMetadata;
     ms.sizeZ = maxZ[0] + 1;
     if (maxC[0] > 0) {
       ms.sizeC *= (maxC[0] + 1);
@@ -1464,6 +1543,7 @@ public class CellSensReader extends FormatReader {
 
       ms.resolutionCount = finalResolution;
     }
+    return(true);
   }
 
   private int convertPixelType(int pixelType) throws FormatException {
@@ -1666,7 +1746,7 @@ public class CellSensReader extends FormatReader {
                 value = String.valueOf(vsi.readDouble());
                 break;
               case BOOLEAN:
-                value = new Boolean(vsi.readBoolean()).toString();
+                value = Boolean.valueOf(vsi.readBoolean()).toString();
                 break;
               case TCHAR:
               case UNICODE_TCHAR:
@@ -1804,72 +1884,72 @@ public class CellSensReader extends FormatReader {
                 pyramid.deviceManufacturers.add(value);
               }
               else if (tag == EXPOSURE_TIME && tagPrefix.length() == 0) {
-                pyramid.exposureTimes.add(new Long(value));
+                pyramid.exposureTimes.add(Long.parseLong(value));
               }
               else if (tag == EXPOSURE_TIME) {
-                pyramid.defaultExposureTime = new Long(value);
+                pyramid.defaultExposureTime = Long.parseLong(value);
                 pyramid.otherExposureTimes.add(pyramid.defaultExposureTime);
               }
               else if (tag == CREATION_TIME && pyramid.acquisitionTime == null) {
-                pyramid.acquisitionTime = new Long(value);
+                pyramid.acquisitionTime = Long.parseLong(value);
               }
               else if (tag == REFRACTIVE_INDEX) {
-                pyramid.refractiveIndex = new Double(value);
+                pyramid.refractiveIndex = DataTools.parseDouble(value);
               }
               else if (tag == OBJECTIVE_MAG) {
-                pyramid.magnification = new Double(value);
+                pyramid.magnification = DataTools.parseDouble(value);
               }
               else if (tag == NUMERICAL_APERTURE) {
-                pyramid.numericalAperture = new Double(value);
+                pyramid.numericalAperture = DataTools.parseDouble(value);
               }
               else if (tag == WORKING_DISTANCE) {
-                pyramid.workingDistance = new Double(value);
+                pyramid.workingDistance = DataTools.parseDouble(value);
               }
               else if (tag == OBJECTIVE_NAME) {
                 pyramid.objectiveNames.add(value);
               }
               else if (tag == OBJECTIVE_TYPE) {
-                pyramid.objectiveTypes.add(new Integer(value));
+                pyramid.objectiveTypes.add(Integer.parseInt(value));
               }
               else if (tag == BIT_DEPTH) {
-                pyramid.bitDepth = new Integer(value);
+                pyramid.bitDepth = Integer.parseInt(value);
               }
               else if (tag == X_BINNING) {
-                pyramid.binningX = new Integer(value);
+                pyramid.binningX = Integer.parseInt(value);
               }
               else if (tag == Y_BINNING) {
-                pyramid.binningY = new Integer(value);
+                pyramid.binningY = Integer.parseInt(value);
               }
               else if (tag == CAMERA_GAIN) {
-                pyramid.gain = new Double(value);
+                pyramid.gain = DataTools.parseDouble(value);
               }
               else if (tag == CAMERA_OFFSET) {
-                pyramid.offset = new Double(value);
+                pyramid.offset = DataTools.parseDouble(value);
               }
               else if (tag == RED_GAIN) {
-                pyramid.redGain = new Double(value);
+                pyramid.redGain = DataTools.parseDouble(value);
               }
               else if (tag == GREEN_GAIN) {
-                pyramid.greenGain = new Double(value);
+                pyramid.greenGain = DataTools.parseDouble(value);
               }
               else if (tag == BLUE_GAIN) {
-                pyramid.blueGain = new Double(value);
+                pyramid.blueGain = DataTools.parseDouble(value);
               }
               else if (tag == RED_OFFSET) {
-                pyramid.redOffset = new Double(value);
+                pyramid.redOffset = DataTools.parseDouble(value);
               }
               else if (tag == GREEN_OFFSET) {
-                pyramid.greenOffset = new Double(value);
+                pyramid.greenOffset = DataTools.parseDouble(value);
               }
               else if (tag == BLUE_OFFSET) {
-                pyramid.blueOffset = new Double(value);
+                pyramid.blueOffset = DataTools.parseDouble(value);
               }
               else if (tag == VALUE) {
                 if (tagPrefix.equals("Channel Wavelength ")) {
-                  pyramid.channelWavelengths.add(new Double(value));
+                  pyramid.channelWavelengths.add(DataTools.parseDouble(value));
                 }
                 else if (tagPrefix.startsWith("Objective Working Distance")) {
-                  pyramid.workingDistance = new Double(value);
+                  pyramid.workingDistance = DataTools.parseDouble(value);
                 }
                 else if (tagPrefix.equals("Z start position")) {
                   pyramid.zStart = DataTools.parseDouble(value);
@@ -2588,6 +2668,7 @@ public class CellSensReader extends FormatReader {
     public transient Double zStart;
     public transient Double zIncrement;
     public transient ArrayList<Double> zValues = new ArrayList<Double>();
+    public boolean   HasAssociatedEtsFile = false;
   }
 
 }
